Re-enable ArcSessionManagerTest.ManagedAndroidAccount.

This is revert of crrev.com/2634113003
(commit fdeac8a35b42a7968a15c0a311b29ab28c215ae0 [formerly 5f6b492a4b74474b7f481c92d6d8687e9b16438b]).
The flakiness should be gone, so reenable it.

Also, because RemoveArcData() was called synchronously in
its fake implementation. It is changed to PostTask()
to emulate the real situation more, so that the test
can capture the intermediate situation.

BUG=681547
TEST=Ran trybots.

Review-Url: https://codereview.chromium.org/2665113005
Cr-Commit-Position: refs/heads/master@{#447460}

Former-commit-id: 8cc925832e97b39381d62e832f137cc574b96177